metin ortalamaları gerçekleştirildi ve görsel kaldırıldı

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     <hr>
 <table height="100" cellspacing="10">
     <tr>
-    <td>
-        <img src="https://www.droetker.com.tr/Recipe/Recipes/droetker.com.tr/tr-tr/baking/image-thumb__25774__RecipeDetailsLightBox/hizli-mayali-pizza.jpg" width="350" alt="pizza Görseli">
-    </td>
+ 
     <td>
     <article>
         <br>
         <br>
-        <p>
+        <p style="padding-left:400px ;">
             &sdotb;
             <u>
                 <b><font style="color:brown ;"> Kaç kişilik</font>:</b>2 kişilik
@@ -44,7 +42,7 @@
         </p>
     </article>    
     
-    <article>
+    <article style="padding-left:400px ;">
     
         <p style="text-align:center ;">
            <span style="background-color:brown ;">
@@ -52,7 +50,7 @@
            </span> 
         </p>
         <p>
-            <ul>
+            <ul style>
                 <li>1 Bardak Su</li>
                 <li>Süt</li>
                 <li>1 Tatlı Kaşığı Şeker</li>
